[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paged-eviction-vllm"
version = "0.1.0"
description = "Production-ready PagedEviction KV cache pruning for vLLM"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "PagedEviction Contributors" }]
keywords = ["llm", "inference", "kv-cache", "vllm", "memory-efficiency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.1"]

[project.optional-dependencies]
vllm = ["vllm>=0.9.0"]
dev = ["pytest>=7", "pytest-cov", "black", "isort", "mypy"]
benchmark = ["vllm>=0.9.0", "transformers>=4.40"]

[project.urls]
Homepage = "https://github.com/pulkit-khanna/paged-eviction-vllm"
Paper = "https://aclanthology.org/2026.findings-eacl.168"

[tool.setuptools.packages.find]
include = ["paged_eviction*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
